# trading-test

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  mn.md  pyproject.toml  requirements.txt
config/: arena.toml  models.toml
config/strategies/: algo_forecast.toml  algo_harvester.toml  algo_meanrev.toml  algo_momentum.toml  algo_partition.toml  llm_analyst.toml  llm_contrarian.toml  llm_generalist.toml  llm_news_trader.toml  llm_strategist.toml
docs/: ARCHITECTURE.md  BURNIN_CHECKLIST.md  DECISIONS.md  SIGMA_CALIBRATION.md  STATUS.md
prompts/: monthly_meta.md.j2  strategist_daily.md.j2  weekly_retro.md.j2
prompts/pending/: strategist_2026-03-19.md
scripts/: __init__.py  backfill_weather.py  burn_in_report.py  init_db.py  manual_input.py  recategorize_markets.py  reset_paper_trading.py  restart_arena.sh  start_all.sh  stop_all.sh  test_trade_flow.py  verify_nexus.sh  verify_nexus_arena.py
services/nexus/: Dockerfile  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.ts
src/arena/: __init__.py  categorization.py  config.py  db.py  env.py  event_groups.py  google_auth.py  main.py  models.py  real_executor.py  scheduler.py
src/tests/: __init__.py  test_calibration_feedback.py  test_db.py  test_discovery_scout.py  test_integration.py  test_limit_order_manager.py  test_orderbook_replay.py  test_output_parser.py  test_paper_executor.py  test_paper_limit_integration.py  test_position_management.py  test_public_reader_cache.py  test_risk.py  test_strategies.py  test_trading_guardrails.py
(+150 files in other folders)
