[project]
name = "arena"
version = "0.1.0"
description = "Arena paper trading tournament for LLM and algorithmic strategies."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "apscheduler>=3.10,<4",
  "gspread>=6.1,<7",
  "google-auth-oauthlib>=1.2,<2",
  "httpx>=0.27,<0.28",
  "jinja2>=3.1,<4",
  "openai>=1.68,<2",
  "fastapi>=0.135.1",
  "uvicorn>=0.42.0",
  "python-dotenv>=1.0,<2",
  "properscoring>=0.1",
  "pykalshi>=0.5.0",
  "earth2studio>=0.12.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
arena = "arena.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.uv]
package = true
